arm/AzureRM_Hardened_IIS_On_WindowsServer2016/AzureRM_Hardened_IIS_On_WindowsServer2016_content.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "Location": {
      "type": "String",
      "allowedValues": [
        "westus2",
        "eastus",
        "eastus2",
        "westus",
        "australiaeast",
        "australiasoutheast",
        "brazilsouth",
        "canadacentral",
        "canadaeast",
        "centralindia",
        "centralus",
        "eastasia",
        "francecentral",
        "japaneast",
        "japanwest",
        "koreacentral",
        "koreasouth",
        "northcentralus",
        "northeurope",
        "southcentralus",
        "southindia",
        "southeastasia",
        "uksouth",
        "ukwest",
        "westcentralus",
        "westeurope",
        "westindia"
      ]
    },
    "VirtualMachine_Name": {
      "type": "String",
      "metadata": {
        "description": "Name for the Virtual Machine to be provisioned. VM name is case-insensitive. Alphanumeric and hyphen are valid characters."
      },
      "minLength": 1,
      "maxLength": 15
    },
    "VirtualMachine_Size": {
      "type": "String",
      "allowedValues": [
        "Basic_A0",
        "Basic_A1",
        "Basic_A2",
        "Basic_A3",
        "Basic_A4",
        "Standard_A0",
        "Standard_A1",
        "Standard_A2",
        "Standard_A3",
        "Standard_A4",
        "Standard_A5",
        "Standard_A6",
        "Standard_A7",
        "Standard_D2_v3",
        "Standard_D4_v3",
        "Standard_D8_v3",
        "Standard_D1_v2",
        "Standard_D2_v2",
        "Standard_D3_v2",
        "Standard_D4_v2",
        "Standard_A1_v2",
        "Standard_A2_v2",
        "Standard_A4_v2",
        "Standard_A8_v2"
      ]
    },
    "VM_Username": {
      "type": "String",
      "metadata": {
        "description": "Username of the administrator account in the Virtual Machine. Username will be used to remote connect (login) to the VM when it is created. Username cannot contain special characters or end with '.'"
      },
      "minLength": 1,
      "maxLength": 15
    },
    "VM_Password": {
      "type": "SecureString",
      "metadata": {
        "description": "Password of the administrator account in the Virtual Machine. Password must have 3 of the following: 1 lowercase character, 1 uppercase character, 1 number and  1 special character that is not - "
      },
      "minLength": 12,
      "maxLength": 123
    },
    "PublicIPAddress_Type": {
      "type": "string",
      "allowedValues": [
        "Static",
        "Dynamic"
      ]
    },
    "DNS_Name_Label": {
      "type": "string",
      "metadata": {
        "description": "An A record that starts with the specified label and resolves to the Public IP Address of this VM. It can contain only lowercase letters, numbers and hyphens. The first character must be a letter. The last character must be a letter or number"
      },
      "minLength": 3,
      "maxLength": 63
    }
  },
  "variables": {
    "storageaccount_name": "[concat('csstoragedisks', take(uniquestring(parameters('VirtualMachine_Name'), deployment().name), 6))]",
    "diagnostics_storageaccount_name": "[concat('csstoragediag', take(uniquestring(parameters('VirtualMachine_Name'),deployment().name), 6))]",
    "virtualnetwork_name": "[concat('csvnet', take(uniquestring(parameters('VirtualMachine_Name'), deployment().name), 6))]",
    "subnet_name": "default",
    "networkinterface_name": "[concat(parameters('VirtualMachine_Name'), take(uniquestring(parameters('VirtualMachine_Name'), deployment().name), 3))]",
    "networksecuritygroup_name": "[concat(parameters('VirtualMachine_Name'), '-nsg')]",
    "publicipaddress_name": "[concat(parameters('VirtualMachine_Name'), '-ip')]",
    "vnetId": "[resourceId(resourcegroup().name,'Microsoft.Network/virtualNetworks', variables('virtualnetwork_name'))]",
    "subnetRef": "[concat(variables('vnetId'), '/subnets/', variables('subnet_name'))]",
    "address_prefix": "172.17.2.0/24",
    "subnet_prefix": "172.17.2.0/24"
  },
  "resources": [{
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('VirtualMachine_Name')]",
      "apiVersion": "2017-12-01",
      "location": "[parameters('Location')]",
      "plan": {
        "name": "hardened-iis-on-windows-ser-2016",
        "publisher": "cognosys",
        "product": "hardened-iis-on-windows-server-2016"
      },
      "properties": {
        "osProfile": {
          "computerName": "[parameters('VirtualMachine_Name')]",
          "adminUsername": "[parameters('VM_Username')]",
          "adminPassword": "[parameters('VM_Password')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('VirtualMachine_Size')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "cognosys",
            "offer": "hardened-iis-on-windows-server-2016",
            "sku": "hardened-iis-on-windows-ser-2016",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "fromImage",
            "vhd": {
              "uri": "[concat(concat(concat('https://', variables('storageaccount_name'), '.blob.core.windows.net/'), 'vhds/'), parameters('VirtualMachine_Name'), '20180806190637.vhd')]"
            },
            "name": "[parameters('VirtualMachine_Name')]"
          },
          "dataDisks": []
        },
        "networkProfile": {
          "networkInterfaces": [{
            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkinterface_name'))]"
          }]
        }
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('networkinterface_name'))]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageaccount_name'))]"
      ]
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageaccount_name')]",
      "apiVersion": "2015-06-15",
      "location": "[parameters('Location')]",
      "properties": {
        "accountType": "Standard_LRS"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualnetwork_name')]",
      "apiVersion": "2018-04-01",
      "location": "[parameters('Location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('address_prefix')]"
          ]
        },
        "subnets": [{
          "name": "[variables('subnet_name')]",
          "properties": {
            "addressPrefix": "[variables('subnet_prefix')]"
          }
        }]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('networkinterface_name')]",
      "apiVersion": "2018-04-01",
      "location": "[parameters('Location')]",
      "properties": {
        "ipConfigurations": [{
          "name": "ipconfig1",
          "properties": {
            "subnet": {
              "id": "[variables('subnetRef')]"
            },
            "privateIPAllocationMethod": "Dynamic",
            "publicIpAddress": {
              "id": "[resourceId(resourcegroup().name,'Microsoft.Network/publicIpAddresses', variables('publicipaddress_name'))]"
            }
          }
        }],
        "networkSecurityGroup": {
          "id": "[resourceId(resourcegroup().name, 'Microsoft.Network/networkSecurityGroups', variables('networksecuritygroup_name'))]"
        }
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualnetwork_name'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('publicipaddress_name'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('networksecuritygroup_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIpAddresses",
      "sku": {
        "name": "Basic"
      },
      "name": "[variables('publicipaddress_name')]",
      "apiVersion": "2017-08-01",
      "location": "[parameters('Location')]",
      "properties": {
        "publicIpAllocationMethod": "[parameters('PublicIPAddress_Type')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('DNS_Name_Label')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('networksecuritygroup_name')]",
      "apiVersion": "2018-01-01",
      "location": "[parameters('Location')]",
      "properties": {
        "securityRules": [{
            "name": "http",
            "properties": {
              "priority": 1010,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceApplicationSecurityGroups": [],
              "destinationApplicationSecurityGroups": [],
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "https",
            "properties": {
              "priority": 1020,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceApplicationSecurityGroups": [],
              "destinationApplicationSecurityGroups": [],
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "rdp",
            "properties": {
              "priority": 1030,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceApplicationSecurityGroups": [],
              "destinationApplicationSecurityGroups": [],
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "VirtualMachine_Name": {
      "type": "string",
      "value": "[parameters('VirtualMachine_Name')]"
    },
    "FQDN": {
      "type": "string",
      "value": "[reference(variables('publicipaddress_name')).dnsSettings.fqdn]"
    }
  }
}
